<resources>
    <string name="app_name">Tic TacToe</string>

    <string name="string_x">x</string>
    <string name="string_o">o</string>
    <string name="reset">Reset</string>

    <string name="player_1">Player 1 – 0</string>
    <string name="player_2">Player 2 – 0</string>

    <string name="settings">Settings</string>

    <string name="set_marker_colour">Set Marker Colour</string>

    <string name="pref_colour_key">colour</string>

    <string name="pref_color_value_red" translatable="false">red</string>
    <string name="pref_color_value_blue" translatable="false">blue</string>
    <string name="pref_color_value_green" translatable="false">green</string>

    <string name="pref_color_label_red" >Red</string>
    <string name="pref_color_label_blue" >Blue</string>
    <string name="pref_color_label_green" >Green</string>

    <string name="pref_set_game_point">Set Game Point</string>
    <string name="pref_game_key">game</string>

    <string name="pref_game_label_three_points">"3"</string>
    <string name="pref_game_label_five_points">"5"</string>


</resources>
